y.output
Terminals unused in grammar

    STRCMP


Grammar

    0 $accept: progr $end

    1 progr: Declaratii Functie_main Definitii_Functii

    2 Declaratie: TIP STRING
    3           | TIP VECTOR
    4           | TIP STRING '(' Lista_Parametrii ')'
    5           | TIP STRING ATRIBUIRE Expresie_INT
    6           | TIP STRING ATRIBUIRE CARACTERE
    7           | TIP STRING ATRIBUIRE NUMAR
    8           | TIP STRING '(' ')'
    9           | STRUCT STRING '{' Declaratii '}'

   10 Lista_Parametrii: TIP STRING
   11                 | Lista_Parametrii ',' TIP STRING

   12 Declaratii: Declaratie ';'
   13           | Declaratii Declaratie ';'

   14 Functie_main: MAIN returneaza

   15 returneaza: '{' Lista_Instructiuni RETURN NUMAR ';' '}'
   16           | '{' Lista_Instructiuni RETURN INTEGER ';' '}'

   17 Lista_Instructiuni: %empty
   18                   | Lista_Instructiuni Instructiune ';'
   19                   | Lista_Instructiuni Instructiune_Control

   20 Instructiune_Control: IF '(' Conditie ')' '{' Lista_Instructiuni '}'
   21                     | IF '(' Conditie ')' '{' Lista_Instructiuni '}' ELSE '{' Lista_Instructiuni '}'
   22                     | FOR '(' Instructiune ';' Conditie ';' Lista_Instructiuni ')' '{' Lista_Instructiuni '}'
   23                     | WHILE '(' Conditie ')' '{' Lista_Instructiuni '}'

   24 Conditie: Conditie MARE Conditie
   25         | Conditie MIC Conditie
   26         | Conditie DIFERIT Conditie
   27         | Conditie EGAL Conditie
   28         | Conditie SI Conditie
   29         | Conditie SAU Conditie
   30         | '(' Conditie ')'
   31         | STRING
   32         | CARACTER
   33         | CARACTERE
   34         | INTEGER
   35         | NUMAR
   36         | TRUE
   37         | FALSE

   38 Instructiune: %empty
   39             | STRING ATRIBUIRE Expresie_INT
   40             | STRING ATRIBUIRE NUMAR
   41             | VECTOR ATRIBUIRE Expresie_INT
   42             | VECTOR ATRIBUIRE NUMAR
   43             | STRCPY '(' STRING ',' CARACTERE ')'
   44             | STRCPY '(' STRING ',' STRING ')'
   45             | STRING '(' Apeluri_Functie ')'
   46             | STRING '.' STRING ATRIBUIRE NUMAR
   47             | STRING '.' STRING ATRIBUIRE STRING '.' STRING
   48             | STRING '.' STRING ATRIBUIRE STRING
   49             | STRING ATRIBUIRE STRING '.' STRING
   50             | Declaratie
   51             | PRINT '(' STRING ',' Expresie_INT ')'
   52             | PRINT '(' CARACTERE ',' Expresie_INT ')'
   53             | PRINT '(' CARACTER ',' Expresie_INT ')'

   54 Expresie_INT: INTEGER
   55             | Expresie_INT MINUS Expresie_INT
   56             | Expresie_INT IMPARTIRE Expresie_INT
   57             | Expresie_INT PLUS Expresie_INT
   58             | Expresie_INT PRODUS Expresie_INT
   59             | MINUS Expresie_INT
   60             | '(' Expresie_INT ')'
   61             | STRING
   62             | VECTOR
   63             | STRING '(' Apeluri_Functie ')'

   64 Apeluri_Functie: STRING
   65                | Apeluri_Functie ',' STRING
   66                | CARACTERE
   67                | CARACTER
   68                | NUMAR
   69                | Apeluri_Functie ',' NUMAR
   70                | Apeluri_Functie ',' CARACTER
   71                | Apeluri_Functie ',' CARACTERE
   72                | STRING '(' Apeluri_Functie ')'
   73                | Apeluri_Functie ',' STRING '(' Apeluri_Functie ')'

   74 Definitii_Functii: %empty
   75                  | Definitii_Functii TIP STRING '(' Lista_Parametrii ')' returneaza


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4 8 20 21 22 23 30 43 44 45 51 52 53 60 63 72 73 75
    ')' (41) 4 8 20 21 22 23 30 43 44 45 51 52 53 60 63 72 73 75
    ',' (44) 11 43 44 51 52 53 65 69 70 71 73
    '.' (46) 46 47 48 49
    ';' (59) 12 13 15 16 18 22
    '{' (123) 9 15 16 20 21 22 23
    '}' (125) 9 15 16 20 21 22 23
    error (256)
    PRINT <strval> (258) 51 52 53
    RETURN <strval> (259) 15 16
    TIP <strval> (260) 2 3 4 5 6 7 8 10 11 75
    MAIN <strval> (261) 14
    VECTOR <strval> (262) 3 41 42 62
    CARACTER <strval> (263) 32 53 67 70
    CARACTERE <strval> (264) 6 33 43 52 66 71
    STRING <strval> (265) 2 4 5 6 7 8 9 10 11 31 39 40 43 44 45 46 47 48 49 51 61 63 64 65 72 73 75
    NUMAR <strval> (266) 7 15 35 40 42 46 68 69
    INTEGER <strval> (267) 16 34 54
    STRUCT <strval> (268) 9
    ATRIBUIRE <strval> (269) 5 6 7 39 40 41 42 46 47 48 49
    MARE <strval> (270) 24
    MIC <strval> (271) 25
    DIFERIT <strval> (272) 26
    EGAL <strval> (273) 27
    PRODUS <strval> (274) 58
    IMPARTIRE <strval> (275) 56
    PLUS <strval> (276) 57
    MINUS <strval> (277) 55 59
    SI <strval> (278) 28
    SAU <strval> (279) 29
    IF (280) 20 21
    ELSE (281) 21
    FOR (282) 22
    WHILE (283) 23
    STRCPY <strval> (284) 43 44
    STRCMP <strval> (285)
    TRUE <strval> (286) 36
    FALSE <strval> (287) 37
    UMINUS (288)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    progr (42)
        on left: 1
        on right: 0
    Declaratie (43)
        on left: 2 3 4 5 6 7 8 9
        on right: 12 13 50
    Lista_Parametrii <strval> (44)
        on left: 10 11
        on right: 4 11 75
    Declaratii (45)
        on left: 12 13
        on right: 1 9 13
    Functie_main (46)
        on left: 14
        on right: 1
    returneaza (47)
        on left: 15 16
        on right: 14 75
    Lista_Instructiuni (48)
        on left: 17 18 19
        on right: 15 16 18 19 20 21 22 23
    Instructiune_Control (49)
        on left: 20 21 22 23
        on right: 19
    Conditie (50)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37
        on right: 20 21 22 23 24 25 26 27 28 29 30
    Instructiune (51)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
        on right: 18 22
    Expresie_INT <expr> (52)
        on left: 54 55 56 57 58 59 60 61 62 63
        on right: 5 39 41 51 52 53 55 56 57 58 59 60
    Apeluri_Functie <strval> (53)
        on left: 64 65 66 67 68 69 70 71 72 73
        on right: 45 63 65 69 70 71 72 73
    Definitii_Functii (54)
        on left: 74 75
        on right: 1 75


State 0

    0 $accept: . progr $end

    TIP     shift, and go to state 1
    STRUCT  shift, and go to state 2

    progr       go to state 3
    Declaratie  go to state 4
    Declaratii  go to state 5


State 1

    2 Declaratie: TIP . STRING
    3           | TIP . VECTOR
    4           | TIP . STRING '(' Lista_Parametrii ')'
    5           | TIP . STRING ATRIBUIRE Expresie_INT
    6           | TIP . STRING ATRIBUIRE CARACTERE
    7           | TIP . STRING ATRIBUIRE NUMAR
    8           | TIP . STRING '(' ')'

    VECTOR  shift, and go to state 6
    STRING  shift, and go to state 7


State 2

    9 Declaratie: STRUCT . STRING '{' Declaratii '}'

    STRING  shift, and go to state 8


State 3

    0 $accept: progr . $end

    $end  shift, and go to state 9


State 4

   12 Declaratii: Declaratie . ';'

    ';'  shift, and go to state 10


State 5

    1 progr: Declaratii . Functie_main Definitii_Functii
   13 Declaratii: Declaratii . Declaratie ';'

    TIP     shift, and go to state 1
    MAIN    shift, and go to state 11
    STRUCT  shift, and go to state 2

    Declaratie    go to state 12
    Functie_main  go to state 13


State 6

    3 Declaratie: TIP VECTOR .

    $default  reduce using rule 3 (Declaratie)


State 7

    2 Declaratie: TIP STRING .
    4           | TIP STRING . '(' Lista_Parametrii ')'
    5           | TIP STRING . ATRIBUIRE Expresie_INT
    6           | TIP STRING . ATRIBUIRE CARACTERE
    7           | TIP STRING . ATRIBUIRE NUMAR
    8           | TIP STRING . '(' ')'

    ATRIBUIRE  shift, and go to state 14
    '('        shift, and go to state 15

    $default  reduce using rule 2 (Declaratie)


State 8

    9 Declaratie: STRUCT STRING . '{' Declaratii '}'

    '{'  shift, and go to state 16


State 9

    0 $accept: progr $end .

    $default  accept


State 10

   12 Declaratii: Declaratie ';' .

    $default  reduce using rule 12 (Declaratii)


State 11

   14 Functie_main: MAIN . returneaza

    '{'  shift, and go to state 17

    returneaza  go to state 18


State 12

   13 Declaratii: Declaratii Declaratie . ';'

    ';'  shift, and go to state 19


State 13

    1 progr: Declaratii Functie_main . Definitii_Functii

    $default  reduce using rule 74 (Definitii_Functii)

    Definitii_Functii  go to state 20


State 14

    5 Declaratie: TIP STRING ATRIBUIRE . Expresie_INT
    6           | TIP STRING ATRIBUIRE . CARACTERE
    7           | TIP STRING ATRIBUIRE . NUMAR

    VECTOR     shift, and go to state 21
    CARACTERE  shift, and go to state 22
    STRING     shift, and go to state 23
    NUMAR      shift, and go to state 24
    INTEGER    shift, and go to state 25
    MINUS      shift, and go to state 26
    '('        shift, and go to state 27

    Expresie_INT  go to state 28


State 15

    4 Declaratie: TIP STRING '(' . Lista_Parametrii ')'
    8           | TIP STRING '(' . ')'

    TIP  shift, and go to state 29
    ')'  shift, and go to state 30

    Lista_Parametrii  go to state 31


State 16

    9 Declaratie: STRUCT STRING '{' . Declaratii '}'

    TIP     shift, and go to state 1
    STRUCT  shift, and go to state 2

    Declaratie  go to state 4
    Declaratii  go to state 32


State 17

   15 returneaza: '{' . Lista_Instructiuni RETURN NUMAR ';' '}'
   16           | '{' . Lista_Instructiuni RETURN INTEGER ';' '}'

    $default  reduce using rule 17 (Lista_Instructiuni)

    Lista_Instructiuni  go to state 33


State 18

   14 Functie_main: MAIN returneaza .

    $default  reduce using rule 14 (Functie_main)


State 19

   13 Declaratii: Declaratii Declaratie ';' .

    $default  reduce using rule 13 (Declaratii)


State 20

    1 progr: Declaratii Functie_main Definitii_Functii .
   75 Definitii_Functii: Definitii_Functii . TIP STRING '(' Lista_Parametrii ')' returneaza

    TIP  shift, and go to state 34

    $default  reduce using rule 1 (progr)


State 21

   62 Expresie_INT: VECTOR .

    $default  reduce using rule 62 (Expresie_INT)


State 22

    6 Declaratie: TIP STRING ATRIBUIRE CARACTERE .

    $default  reduce using rule 6 (Declaratie)


State 23

   61 Expresie_INT: STRING .
   63             | STRING . '(' Apeluri_Functie ')'

    '('  shift, and go to state 35

    $default  reduce using rule 61 (Expresie_INT)


State 24

    7 Declaratie: TIP STRING ATRIBUIRE NUMAR .

    $default  reduce using rule 7 (Declaratie)


State 25

   54 Expresie_INT: INTEGER .

    $default  reduce using rule 54 (Expresie_INT)


State 26

   59 Expresie_INT: MINUS . Expresie_INT

    VECTOR   shift, and go to state 21
    STRING   shift, and go to state 23
    INTEGER  shift, and go to state 25
    MINUS    shift, and go to state 26
    '('      shift, and go to state 27

    Expresie_INT  go to state 36


State 27

   60 Expresie_INT: '(' . Expresie_INT ')'

    VECTOR   shift, and go to state 21
    STRING   shift, and go to state 23
    INTEGER  shift, and go to state 25
    MINUS    shift, and go to state 26
    '('      shift, and go to state 27

    Expresie_INT  go to state 37


State 28

    5 Declaratie: TIP STRING ATRIBUIRE Expresie_INT .
   55 Expresie_INT: Expresie_INT . MINUS Expresie_INT
   56             | Expresie_INT . IMPARTIRE Expresie_INT
   57             | Expresie_INT . PLUS Expresie_INT
   58             | Expresie_INT . PRODUS Expresie_INT

    PRODUS     shift, and go to state 38
    IMPARTIRE  shift, and go to state 39
    PLUS       shift, and go to state 40
    MINUS      shift, and go to state 41

    $default  reduce using rule 5 (Declaratie)


State 29

   10 Lista_Parametrii: TIP . STRING

    STRING  shift, and go to state 42


State 30

    8 Declaratie: TIP STRING '(' ')' .

    $default  reduce using rule 8 (Declaratie)


State 31

    4 Declaratie: TIP STRING '(' Lista_Parametrii . ')'
   11 Lista_Parametrii: Lista_Parametrii . ',' TIP STRING

    ')'  shift, and go to state 43
    ','  shift, and go to state 44


State 32

    9 Declaratie: STRUCT STRING '{' Declaratii . '}'
   13 Declaratii: Declaratii . Declaratie ';'

    TIP     shift, and go to state 1
    STRUCT  shift, and go to state 2
    '}'     shift, and go to state 45

    Declaratie  go to state 12


State 33

   15 returneaza: '{' Lista_Instructiuni . RETURN NUMAR ';' '}'
   16           | '{' Lista_Instructiuni . RETURN INTEGER ';' '}'
   18 Lista_Instructiuni: Lista_Instructiuni . Instructiune ';'
   19                   | Lista_Instructiuni . Instructiune_Control

    PRINT   shift, and go to state 46
    RETURN  shift, and go to state 47
    TIP     shift, and go to state 1
    VECTOR  shift, and go to state 48
    STRING  shift, and go to state 49
    STRUCT  shift, and go to state 2
    IF      shift, and go to state 50
    FOR     shift, and go to state 51
    WHILE   shift, and go to state 52
    STRCPY  shift, and go to state 53

    $default  reduce using rule 38 (Instructiune)

    Declaratie            go to state 54
    Instructiune_Control  go to state 55
    Instructiune          go to state 56


State 34

   75 Definitii_Functii: Definitii_Functii TIP . STRING '(' Lista_Parametrii ')' returneaza

    STRING  shift, and go to state 57


State 35

   63 Expresie_INT: STRING '(' . Apeluri_Functie ')'

    CARACTER   shift, and go to state 58
    CARACTERE  shift, and go to state 59
    STRING     shift, and go to state 60
    NUMAR      shift, and go to state 61

    Apeluri_Functie  go to state 62


State 36

   55 Expresie_INT: Expresie_INT . MINUS Expresie_INT
   56             | Expresie_INT . IMPARTIRE Expresie_INT
   57             | Expresie_INT . PLUS Expresie_INT
   58             | Expresie_INT . PRODUS Expresie_INT
   59             | MINUS Expresie_INT .

    $default  reduce using rule 59 (Expresie_INT)


State 37

   55 Expresie_INT: Expresie_INT . MINUS Expresie_INT
   56             | Expresie_INT . IMPARTIRE Expresie_INT
   57             | Expresie_INT . PLUS Expresie_INT
   58             | Expresie_INT . PRODUS Expresie_INT
   60             | '(' Expresie_INT . ')'

    PRODUS     shift, and go to state 38
    IMPARTIRE  shift, and go to state 39
    PLUS       shift, and go to state 40
    MINUS      shift, and go to state 41
    ')'        shift, and go to state 63


State 38

   58 Expresie_INT: Expresie_INT PRODUS . Expresie_INT

    VECTOR   shift, and go to state 21
    STRING   shift, and go to state 23
    INTEGER  shift, and go to state 25
    MINUS    shift, and go to state 26
    '('      shift, and go to state 27

    Expresie_INT  go to state 64


State 39

   56 Expresie_INT: Expresie_INT IMPARTIRE . Expresie_INT

    VECTOR   shift, and go to state 21
    STRING   shift, and go to state 23
    INTEGER  shift, and go to state 25
    MINUS    shift, and go to state 26
    '('      shift, and go to state 27

    Expresie_INT  go to state 65


State 40

   57 Expresie_INT: Expresie_INT PLUS . Expresie_INT

    VECTOR   shift, and go to state 21
    STRING   shift, and go to state 23
    INTEGER  shift, and go to state 25
    MINUS    shift, and go to state 26
    '('      shift, and go to state 27

    Expresie_INT  go to state 66


State 41

   55 Expresie_INT: Expresie_INT MINUS . Expresie_INT

    VECTOR   shift, and go to state 21
    STRING   shift, and go to state 23
    INTEGER  shift, and go to state 25
    MINUS    shift, and go to state 26
    '('      shift, and go to state 27

    Expresie_INT  go to state 67


State 42

   10 Lista_Parametrii: TIP STRING .

    $default  reduce using rule 10 (Lista_Parametrii)


State 43

    4 Declaratie: TIP STRING '(' Lista_Parametrii ')' .

    $default  reduce using rule 4 (Declaratie)


State 44

   11 Lista_Parametrii: Lista_Parametrii ',' . TIP STRING

    TIP  shift, and go to state 68


State 45

    9 Declaratie: STRUCT STRING '{' Declaratii '}' .

    $default  reduce using rule 9 (Declaratie)


State 46

   51 Instructiune: PRINT . '(' STRING ',' Expresie_INT ')'
   52             | PRINT . '(' CARACTERE ',' Expresie_INT ')'
   53             | PRINT . '(' CARACTER ',' Expresie_INT ')'

    '('  shift, and go to state 69


State 47

   15 returneaza: '{' Lista_Instructiuni RETURN . NUMAR ';' '}'
   16           | '{' Lista_Instructiuni RETURN . INTEGER ';' '}'

    NUMAR    shift, and go to state 70
    INTEGER  shift, and go to state 71


State 48

   41 Instructiune: VECTOR . ATRIBUIRE Expresie_INT
   42             | VECTOR . ATRIBUIRE NUMAR

    ATRIBUIRE  shift, and go to state 72


State 49

   39 Instructiune: STRING . ATRIBUIRE Expresie_INT
   40             | STRING . ATRIBUIRE NUMAR
   45             | STRING . '(' Apeluri_Functie ')'
   46             | STRING . '.' STRING ATRIBUIRE NUMAR
   47             | STRING . '.' STRING ATRIBUIRE STRING '.' STRING
   48             | STRING . '.' STRING ATRIBUIRE STRING
   49             | STRING . ATRIBUIRE STRING '.' STRING

    ATRIBUIRE  shift, and go to state 73
    '('        shift, and go to state 74
    '.'        shift, and go to state 75


State 50

   20 Instructiune_Control: IF . '(' Conditie ')' '{' Lista_Instructiuni '}'
   21                     | IF . '(' Conditie ')' '{' Lista_Instructiuni '}' ELSE '{' Lista_Instructiuni '}'

    '('  shift, and go to state 76


State 51

   22 Instructiune_Control: FOR . '(' Instructiune ';' Conditie ';' Lista_Instructiuni ')' '{' Lista_Instructiuni '}'

    '('  shift, and go to state 77


State 52

   23 Instructiune_Control: WHILE . '(' Conditie ')' '{' Lista_Instructiuni '}'

    '('  shift, and go to state 78


State 53

   43 Instructiune: STRCPY . '(' STRING ',' CARACTERE ')'
   44             | STRCPY . '(' STRING ',' STRING ')'

    '('  shift, and go to state 79


State 54

   50 Instructiune: Declaratie .

    $default  reduce using rule 50 (Instructiune)


State 55

   19 Lista_Instructiuni: Lista_Instructiuni Instructiune_Control .

    $default  reduce using rule 19 (Lista_Instructiuni)


State 56

   18 Lista_Instructiuni: Lista_Instructiuni Instructiune . ';'

    ';'  shift, and go to state 80


State 57

   75 Definitii_Functii: Definitii_Functii TIP STRING . '(' Lista_Parametrii ')' returneaza

    '('  shift, and go to state 81


State 58

   67 Apeluri_Functie: CARACTER .

    $default  reduce using rule 67 (Apeluri_Functie)


State 59

   66 Apeluri_Functie: CARACTERE .

    $default  reduce using rule 66 (Apeluri_Functie)


State 60

   64 Apeluri_Functie: STRING .
   72                | STRING . '(' Apeluri_Functie ')'

    '('  shift, and go to state 82

    $default  reduce using rule 64 (Apeluri_Functie)


State 61

   68 Apeluri_Functie: NUMAR .

    $default  reduce using rule 68 (Apeluri_Functie)


State 62

   63 Expresie_INT: STRING '(' Apeluri_Functie . ')'
   65 Apeluri_Functie: Apeluri_Functie . ',' STRING
   69                | Apeluri_Functie . ',' NUMAR
   70                | Apeluri_Functie . ',' CARACTER
   71                | Apeluri_Functie . ',' CARACTERE
   73                | Apeluri_Functie . ',' STRING '(' Apeluri_Functie ')'

    ')'  shift, and go to state 83
    ','  shift, and go to state 84


State 63

   60 Expresie_INT: '(' Expresie_INT ')' .

    $default  reduce using rule 60 (Expresie_INT)


State 64

   55 Expresie_INT: Expresie_INT . MINUS Expresie_INT
   56             | Expresie_INT . IMPARTIRE Expresie_INT
   57             | Expresie_INT . PLUS Expresie_INT
   58             | Expresie_INT . PRODUS Expresie_INT
   58             | Expresie_INT PRODUS Expresie_INT .

    $default  reduce using rule 58 (Expresie_INT)


State 65

   55 Expresie_INT: Expresie_INT . MINUS Expresie_INT
   56             | Expresie_INT . IMPARTIRE Expresie_INT
   56             | Expresie_INT IMPARTIRE Expresie_INT .
   57             | Expresie_INT . PLUS Expresie_INT
   58             | Expresie_INT . PRODUS Expresie_INT

    $default  reduce using rule 56 (Expresie_INT)


State 66

   55 Expresie_INT: Expresie_INT . MINUS Expresie_INT
   56             | Expresie_INT . IMPARTIRE Expresie_INT
   57             | Expresie_INT . PLUS Expresie_INT
   57             | Expresie_INT PLUS Expresie_INT .
   58             | Expresie_INT . PRODUS Expresie_INT

    PRODUS     shift, and go to state 38
    IMPARTIRE  shift, and go to state 39

    $default  reduce using rule 57 (Expresie_INT)


State 67

   55 Expresie_INT: Expresie_INT . MINUS Expresie_INT
   55             | Expresie_INT MINUS Expresie_INT .
   56             | Expresie_INT . IMPARTIRE Expresie_INT
   57             | Expresie_INT . PLUS Expresie_INT
   58             | Expresie_INT . PRODUS Expresie_INT

    PRODUS     shift, and go to state 38
    IMPARTIRE  shift, and go to state 39

    $default  reduce using rule 55 (Expresie_INT)


State 68

   11 Lista_Parametrii: Lista_Parametrii ',' TIP . STRING

    STRING  shift, and go to state 85


State 69

   51 Instructiune: PRINT '(' . STRING ',' Expresie_INT ')'
   52             | PRINT '(' . CARACTERE ',' Expresie_INT ')'
   53             | PRINT '(' . CARACTER ',' Expresie_INT ')'

    CARACTER   shift, and go to state 86
    CARACTERE  shift, and go to state 87
    STRING     shift, and go to state 88


State 70

   15 returneaza: '{' Lista_Instructiuni RETURN NUMAR . ';' '}'

    ';'  shift, and go to state 89


State 71

   16 returneaza: '{' Lista_Instructiuni RETURN INTEGER . ';' '}'

    ';'  shift, and go to state 90


State 72

   41 Instructiune: VECTOR ATRIBUIRE . Expresie_INT
   42             | VECTOR ATRIBUIRE . NUMAR

    VECTOR   shift, and go to state 21
    STRING   shift, and go to state 23
    NUMAR    shift, and go to state 91
    INTEGER  shift, and go to state 25
    MINUS    shift, and go to state 26
    '('      shift, and go to state 27

    Expresie_INT  go to state 92


State 73

   39 Instructiune: STRING ATRIBUIRE . Expresie_INT
   40             | STRING ATRIBUIRE . NUMAR
   49             | STRING ATRIBUIRE . STRING '.' STRING

    VECTOR   shift, and go to state 21
    STRING   shift, and go to state 93
    NUMAR    shift, and go to state 94
    INTEGER  shift, and go to state 25
    MINUS    shift, and go to state 26
    '('      shift, and go to state 27

    Expresie_INT  go to state 95


State 74

   45 Instructiune: STRING '(' . Apeluri_Functie ')'

    CARACTER   shift, and go to state 58
    CARACTERE  shift, and go to state 59
    STRING     shift, and go to state 60
    NUMAR      shift, and go to state 61

    Apeluri_Functie  go to state 96


State 75

   46 Instructiune: STRING '.' . STRING ATRIBUIRE NUMAR
   47             | STRING '.' . STRING ATRIBUIRE STRING '.' STRING
   48             | STRING '.' . STRING ATRIBUIRE STRING

    STRING  shift, and go to state 97


State 76

   20 Instructiune_Control: IF '(' . Conditie ')' '{' Lista_Instructiuni '}'
   21                     | IF '(' . Conditie ')' '{' Lista_Instructiuni '}' ELSE '{' Lista_Instructiuni '}'

    CARACTER   shift, and go to state 98
    CARACTERE  shift, and go to state 99
    STRING     shift, and go to state 100
    NUMAR      shift, and go to state 101
    INTEGER    shift, and go to state 102
    TRUE       shift, and go to state 103
    FALSE      shift, and go to state 104
    '('        shift, and go to state 105

    Conditie  go to state 106


State 77

   22 Instructiune_Control: FOR '(' . Instructiune ';' Conditie ';' Lista_Instructiuni ')' '{' Lista_Instructiuni '}'

    PRINT   shift, and go to state 46
    TIP     shift, and go to state 1
    VECTOR  shift, and go to state 48
    STRING  shift, and go to state 49
    STRUCT  shift, and go to state 2
    STRCPY  shift, and go to state 53

    $default  reduce using rule 38 (Instructiune)

    Declaratie    go to state 54
    Instructiune  go to state 107


State 78

   23 Instructiune_Control: WHILE '(' . Conditie ')' '{' Lista_Instructiuni '}'

    CARACTER   shift, and go to state 98
    CARACTERE  shift, and go to state 99
    STRING     shift, and go to state 100
    NUMAR      shift, and go to state 101
    INTEGER    shift, and go to state 102
    TRUE       shift, and go to state 103
    FALSE      shift, and go to state 104
    '('        shift, and go to state 105

    Conditie  go to state 108


State 79

   43 Instructiune: STRCPY '(' . STRING ',' CARACTERE ')'
   44             | STRCPY '(' . STRING ',' STRING ')'

    STRING  shift, and go to state 109


State 80

   18 Lista_Instructiuni: Lista_Instructiuni Instructiune ';' .

    $default  reduce using rule 18 (Lista_Instructiuni)


State 81

   75 Definitii_Functii: Definitii_Functii TIP STRING '(' . Lista_Parametrii ')' returneaza

    TIP  shift, and go to state 29

    Lista_Parametrii  go to state 110


State 82

   72 Apeluri_Functie: STRING '(' . Apeluri_Functie ')'

    CARACTER   shift, and go to state 58
    CARACTERE  shift, and go to state 59
    STRING     shift, and go to state 60
    NUMAR      shift, and go to state 61

    Apeluri_Functie  go to state 111


State 83

   63 Expresie_INT: STRING '(' Apeluri_Functie ')' .

    $default  reduce using rule 63 (Expresie_INT)


State 84

   65 Apeluri_Functie: Apeluri_Functie ',' . STRING
   69                | Apeluri_Functie ',' . NUMAR
   70                | Apeluri_Functie ',' . CARACTER
   71                | Apeluri_Functie ',' . CARACTERE
   73                | Apeluri_Functie ',' . STRING '(' Apeluri_Functie ')'

    CARACTER   shift, and go to state 112
    CARACTERE  shift, and go to state 113
    STRING     shift, and go to state 114
    NUMAR      shift, and go to state 115


State 85

   11 Lista_Parametrii: Lista_Parametrii ',' TIP STRING .

    $default  reduce using rule 11 (Lista_Parametrii)


State 86

   53 Instructiune: PRINT '(' CARACTER . ',' Expresie_INT ')'

    ','  shift, and go to state 116


State 87

   52 Instructiune: PRINT '(' CARACTERE . ',' Expresie_INT ')'

    ','  shift, and go to state 117


State 88

   51 Instructiune: PRINT '(' STRING . ',' Expresie_INT ')'

    ','  shift, and go to state 118


State 89

   15 returneaza: '{' Lista_Instructiuni RETURN NUMAR ';' . '}'

    '}'  shift, and go to state 119


State 90

   16 returneaza: '{' Lista_Instructiuni RETURN INTEGER ';' . '}'

    '}'  shift, and go to state 120


State 91

   42 Instructiune: VECTOR ATRIBUIRE NUMAR .

    $default  reduce using rule 42 (Instructiune)


State 92

   41 Instructiune: VECTOR ATRIBUIRE Expresie_INT .
   55 Expresie_INT: Expresie_INT . MINUS Expresie_INT
   56             | Expresie_INT . IMPARTIRE Expresie_INT
   57             | Expresie_INT . PLUS Expresie_INT
   58             | Expresie_INT . PRODUS Expresie_INT

    PRODUS     shift, and go to state 38
    IMPARTIRE  shift, and go to state 39
    PLUS       shift, and go to state 40
    MINUS      shift, and go to state 41

    $default  reduce using rule 41 (Instructiune)


State 93

   49 Instructiune: STRING ATRIBUIRE STRING . '.' STRING
   61 Expresie_INT: STRING .
   63             | STRING . '(' Apeluri_Functie ')'

    '('  shift, and go to state 35
    '.'  shift, and go to state 121

    $default  reduce using rule 61 (Expresie_INT)


State 94

   40 Instructiune: STRING ATRIBUIRE NUMAR .

    $default  reduce using rule 40 (Instructiune)


State 95

   39 Instructiune: STRING ATRIBUIRE Expresie_INT .
   55 Expresie_INT: Expresie_INT . MINUS Expresie_INT
   56             | Expresie_INT . IMPARTIRE Expresie_INT
   57             | Expresie_INT . PLUS Expresie_INT
   58             | Expresie_INT . PRODUS Expresie_INT

    PRODUS     shift, and go to state 38
    IMPARTIRE  shift, and go to state 39
    PLUS       shift, and go to state 40
    MINUS      shift, and go to state 41

    $default  reduce using rule 39 (Instructiune)


State 96

   45 Instructiune: STRING '(' Apeluri_Functie . ')'
   65 Apeluri_Functie: Apeluri_Functie . ',' STRING
   69                | Apeluri_Functie . ',' NUMAR
   70                | Apeluri_Functie . ',' CARACTER
   71                | Apeluri_Functie . ',' CARACTERE
   73                | Apeluri_Functie . ',' STRING '(' Apeluri_Functie ')'

    ')'  shift, and go to state 122
    ','  shift, and go to state 84


State 97

   46 Instructiune: STRING '.' STRING . ATRIBUIRE NUMAR
   47             | STRING '.' STRING . ATRIBUIRE STRING '.' STRING
   48             | STRING '.' STRING . ATRIBUIRE STRING

    ATRIBUIRE  shift, and go to state 123


State 98

   32 Conditie: CARACTER .

    $default  reduce using rule 32 (Conditie)


State 99

   33 Conditie: CARACTERE .

    $default  reduce using rule 33 (Conditie)


State 100

   31 Conditie: STRING .

    $default  reduce using rule 31 (Conditie)


State 101

   35 Conditie: NUMAR .

    $default  reduce using rule 35 (Conditie)


State 102

   34 Conditie: INTEGER .

    $default  reduce using rule 34 (Conditie)


State 103

   36 Conditie: TRUE .

    $default  reduce using rule 36 (Conditie)


State 104

   37 Conditie: FALSE .

    $default  reduce using rule 37 (Conditie)


State 105

   30 Conditie: '(' . Conditie ')'

    CARACTER   shift, and go to state 98
    CARACTERE  shift, and go to state 99
    STRING     shift, and go to state 100
    NUMAR      shift, and go to state 101
    INTEGER    shift, and go to state 102
    TRUE       shift, and go to state 103
    FALSE      shift, and go to state 104
    '('        shift, and go to state 105

    Conditie  go to state 124


State 106

   20 Instructiune_Control: IF '(' Conditie . ')' '{' Lista_Instructiuni '}'
   21                     | IF '(' Conditie . ')' '{' Lista_Instructiuni '}' ELSE '{' Lista_Instructiuni '}'
   24 Conditie: Conditie . MARE Conditie
   25         | Conditie . MIC Conditie
   26         | Conditie . DIFERIT Conditie
   27         | Conditie . EGAL Conditie
   28         | Conditie . SI Conditie
   29         | Conditie . SAU Conditie

    MARE     shift, and go to state 125
    MIC      shift, and go to state 126
    DIFERIT  shift, and go to state 127
    EGAL     shift, and go to state 128
    SI       shift, and go to state 129
    SAU      shift, and go to state 130
    ')'      shift, and go to state 131


State 107

   22 Instructiune_Control: FOR '(' Instructiune . ';' Conditie ';' Lista_Instructiuni ')' '{' Lista_Instructiuni '}'

    ';'  shift, and go to state 132


State 108

   23 Instructiune_Control: WHILE '(' Conditie . ')' '{' Lista_Instructiuni '}'
   24 Conditie: Conditie . MARE Conditie
   25         | Conditie . MIC Conditie
   26         | Conditie . DIFERIT Conditie
   27         | Conditie . EGAL Conditie
   28         | Conditie . SI Conditie
   29         | Conditie . SAU Conditie

    MARE     shift, and go to state 125
    MIC      shift, and go to state 126
    DIFERIT  shift, and go to state 127
    EGAL     shift, and go to state 128
    SI       shift, and go to state 129
    SAU      shift, and go to state 130
    ')'      shift, and go to state 133


State 109

   43 Instructiune: STRCPY '(' STRING . ',' CARACTERE ')'
   44             | STRCPY '(' STRING . ',' STRING ')'

    ','  shift, and go to state 134


State 110

   11 Lista_Parametrii: Lista_Parametrii . ',' TIP STRING
   75 Definitii_Functii: Definitii_Functii TIP STRING '(' Lista_Parametrii . ')' returneaza

    ')'  shift, and go to state 135
    ','  shift, and go to state 44


State 111

   65 Apeluri_Functie: Apeluri_Functie . ',' STRING
   69                | Apeluri_Functie . ',' NUMAR
   70                | Apeluri_Functie . ',' CARACTER
   71                | Apeluri_Functie . ',' CARACTERE
   72                | STRING '(' Apeluri_Functie . ')'
   73                | Apeluri_Functie . ',' STRING '(' Apeluri_Functie ')'

    ')'  shift, and go to state 136
    ','  shift, and go to state 84


State 112

   70 Apeluri_Functie: Apeluri_Functie ',' CARACTER .
